src/objects/Int_Asset_Usage__c.object
<CustomObject>
    <description>Int Asset Usage</description>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Name</description>
        <label>Asset Name</label>
        <referenceTo>Int_Asset__c</referenceTo>
        <relationshipLabel>Int Asset Usages</relationshipLabel>
        <relationshipName>Int_Asset_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number</description>
        <label>Asset Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Source_System__c</fullName>
        <description>Asset Source System</description>
        <label>Asset Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <description>Meter Number</description>
        <label>Meter Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observation_Date_Time__c</fullName>
        <description>Observation Date Time</description>
        <label>Observation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Observation_Measure__c</fullName>
        <description>Observation Measure</description>
        <label>Observation Measure</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observation_Unit_Code__c</fullName>
        <description>Observation Unit Code</description>
        <label>Observation Unit Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Int Asset Usage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUI-{0000000000}</displayFormat>
        <label>Asset Usage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Asset Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>